force-app/main/default/objects/TrainingNotification__c/fields/Longitude__c.field-meta.xml
<CustomField>
    <fullName>Longitude__c</fullName>
    <label>Longitude</label>
    <type>Number</type>
    <precision>10</precision><scale>6</scale>
</CustomField>