force-app/main/default/objects/TrainingNotification__c/fields/MonthlyRent__c.field-meta.xml
<CustomField>
    <fullName>MonthlyRent__c</fullName>
    <label>Monthly Rent</label>
    <type>Number</type>
    <precision>18</precision><scale>2</scale>
</CustomField>