force-app/main/default/objects/TrainingNotification__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <type>Text</type>
    <length>20</length>
</CustomField>