force-app/main/default/objects/TrainingNotification__c/fields/ReferenceNumber__c.field-meta.xml
<CustomField>
    <fullName>ReferenceNumber__c</fullName>
    <label>Reference Number</label>
    <type>Text</type>
    <length>80</length>
</CustomField>